<?xml version="1.0" encoding="utf-8"?>




<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >




        <item
            android:id="@+id/message"
            android:icon="@drawable/icon_message"
            android:title="@string/item_1" />




        <item
            android:id="@+id/lab"
            android:icon="@drawable/icon_lab"
            android:title="@string/item_lab" />





        <item
            android:id="@+id/edit"
            app:showAsAction="always"
            android:icon="@drawable/icon_profile"
            android:title="@string/item_2" />






        <item
            android:id="@+id/exit"
            android:icon="@drawable/icon_exit"
            android:title="@string/item_3" />









    </group>
</menu>