<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        tools:context="com.example.amhso.salamat.Exam1Activity"
        android:isScrollContainer="true">



        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"/>



        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/age"/>


        <EditText
            android:id="@+id/national"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/national"/>


        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/weight"/>


        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job"/>


        <EditText
            android:id="@+id/address"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"/>


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/radio_female" />

            </RadioGroup>







            <RadioGroup
                android:id="@+id/marriageS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/marriage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marriage"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:checked="true" />


                <RadioButton
                    android:id="@+id/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:text="@string/single" />

            </RadioGroup>


        </LinearLayout>



        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shadow"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/send"/>





    </LinearLayout>





</ScrollView>