<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        tools:context="com.example.amhso.salamat.Exam1Activity"
        android:isScrollContainer="true">





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq1"/>


        <RadioGroup
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>










        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq2"/>


        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"

            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>












        <TextView
            android:layout_marginTop="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq3"/>


        <RadioGroup
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>












        <TextView
            android:layout_marginTop="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq1"/>


        <RadioGroup
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>








        <TextView
            android:layout_marginTop="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq5"/>


        <RadioGroup
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>















        <TextView
            android:layout_marginTop="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq6"/>


        <RadioGroup
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>


        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textq7" />


        <RadioGroup
            android:id="@+id/q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>












        <TextView
            android:layout_marginTop="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq8"/>


        <RadioGroup
            android:id="@+id/q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>










        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq9"/>


        <RadioGroup
            android:id="@+id/q9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>















        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq11"/>


        <RadioGroup
            android:id="@+id/q11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>
















        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq12"/>


        <RadioGroup
            android:id="@+id/q12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>














        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textq13"/>


        <RadioGroup
            android:id="@+id/q13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:buttonTint="@color/colorPrimaryDark"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/no" />


        </RadioGroup>























        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shadow"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/send"/>





    </LinearLayout>





</ScrollView>